advanced-topics/09-k8s-cloudnative/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-go-sample
  labels:
    app: k8s-go-sample
spec:
  type: ClusterIP
  selector:
    app: k8s-go-sample
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  sessionAffinity: None
