advanced-topics/09-k8s-cloudnative/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-go-sample-ingress
  labels:
    app: k8s-go-sample
  annotations:
    # NGINX Ingress Controller annotations
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-go-sample.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-go-sample
            port:
              number: 80
