advanced-topics/09-k8s-cloudnative/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k8s-go-sample-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: k8s-go-sample
  policyTypes:
  - ingress:
    - from:
      - podSelector:
        matchLabels:
          app: k8s-go-sample
      ports:
        - protocol: TCP
          port: 8080
  - egress:
    - to:
      - ipBlock:
        cidr: 10.0.0.0/8
    - to:
      - namespaceSelector:
        matchLabels:
          app: k8s-go-sample
    ports:
    - protocol: TCP
      port: 8080
